# FindME-DisasterManagement

./: .gitignore  README.md
Algo/: .gitignore  Distance Metrics.ipynb  Distance_Metrics.py  cr_imId.m  names.txt
Algo/face_desc_src/: .nfs000000040d35a21400000023  launch_fv_comp.m  launch_learn.m  return_fv_single_img.m  sge_master.sh  startup.m
Algo/face_desc_src/+face_desc/+config/: feat_config.m  learn_config.m
Algo/face_desc_src/+face_desc/+manager/+evaluation/: evaluate.m
Algo/face_desc_src/+face_desc/+prep_img/: align_crop_lfw.m  crop_lfw.m  crop_lfw_funneled.m
Algo/face_desc_src/+featpipem/+chunkio/: loadChunksIntoMat.m  saveMatToChunks.m
Algo/face_desc_src/+vis/: ellipse.m  vis_gmm.m
Algo/face_desc_src/common/: ensure_dir.m  save_struct.m
Algo/face_desc_src/gmm-fisher/: README.txt  fisher.cxx  fisher.h  gmm.cxx  gmm.h  stat.h
Algo/face_desc_src/gmm-fisher/matlab/: compile.m  mexFisherEncodeHelperSP.cxx  mexFisherEncodeHelperSP.mexa64  mexGmmTrainSP.cxx  mexGmmTrainSP.mexa64
Algo/logs/: .nfs000000062502c25500000024  log.95790.1.out  log.95791.1.out  log.95792.1.out  log.95793.1.out  log.95794.1.out
Algo_backup/: FaceMatcher.m  getAllFiles.m  main.m  run_face_matcher.m
AndroidApp/: .gitignore  AndroidManifest.xml
AndroidApp/res/drawable/: Thumbs.db  buttonshape.xml  buttonshape_next.xml  buttonshape_prev.xml  listitem.xml  round.xml
AndroidApp/res/drawable-hdpi/: Thumbs.db
AndroidApp/res/layout/: activity_image_list.xml  activity_main.xml  image_list_child.xml  popup_layout.xml
AndroidApp/res/menu/: image_list.xml  main.xml
AndroidApp/res/values/: colors.xml  dimen.xml  strings.xml
Backend/: CMakeLists.txt
Backend/db/: ImageDetections.csv  LandmarkDetectionPositions.csv
Backend/libraries/: install_boost.sh  install_metric_learn.sh  install_sqlite.sh
Backend/libraries/dlib-18.11/dlib/: .add_python_module.swp
Backend/libraries/dlib-18.11/docs/: algorithms.html  api.html  bayes.html  books.html  change_log.html  compile.html  compression.html  containers.html  face_landmark_detection_ex.cpp.html  faq.html  graph_tools.html  howto_contribute.html  imaging.html  index.html  intro.html  kernel_1a.html  kernel_1b.html  kernel_1c.html  kernel_1da.html  kernel_1db.html  kernel_1ea.html  kernel_1eb.html  kernel_1ec.html  kernel_2a.html  kernel_3a.html  kernel_3b.html  license.html  linear_algebra.html  metaprogramming.html  ml.html  network.html  old_change_log.html  old_release_notes.html  optimization.html  other.html  parsing.html  release_notes.html  term_index.html
Backend/libraries/dlib-18.11/docs/dlib/: CMakeLists.txt.html  assert.h.html  image_transforms.h.html  revision.h.html
Backend/libraries/dlib-18.11/docs/dlib/image_processing/: shape_predictor.h.html  shape_predictor_abstract.h.html
Backend/libraries/dlib-18.11/docs/dlib/image_transforms/: interpolation.h.html  interpolation_abstract.h.html  lbp_abstract.h.html
Backend/libraries/dlib-18.11/docs/dlib/sqlite/: sqlite_abstract.h.html
Backend/libraries/dlib-18.11/docs/dlib/statistics/: lda.h.html  lda_abstract.h.html
Backend/libraries/dlib-18.11/docs/dlib/test/: statistics.cpp.html
Backend/libraries/dlib-18.11/docs/python/.doctrees/: environment.pickle
Backend/libraries/yael_v438/: makefile.inc
Backend/libraries/yael_v438/progs/: bvecfile  fvecfile  ivecfile  kmeans  knn
Backend/libraries/yael_v438/yael/: yael.py  yael_wrap.c
Backend/src/: DB.cpp  DB.hpp  FV.cpp  FV.hpp  common.hpp  create_db.sh  create_schema.sql  main.cpp  mkramdisk_macosx.sh
Backend/src/python/: .face_detector.py.swp  Landmark_Detector.ipynb  lbp.ipynb
Backend/src/python/.ipynb_checkpoints/: Landmark_Detector-checkpoint.ipynb
MiddleLayer/: .classpath  .gitignore  .project  build.xml
MiddleLayer/WEB-INF/: web.xml
mysite/fmp/: .feat_1.mat.hqx80W  .feat_1.mat.nbfFZz  .feat_1.mat.y3oyKK  chunk_info.mat  urls.py  views.py
mysite/mysite/: settings.py  urls.py
(+47 files in other folders)
